added most of marimba notes to construction script

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -11,7 +11,7 @@ SwarmIntermediateFolder=C:/Users/Eric/Documents/Unreal Projects/MarimbaWithSound
 bMonitorEditorPerformance=True
 bShowCompilerLogOnCompileError=False
 bSCSEditorShowFloor=False
-SCSViewportCameraSpeed=4
+SCSViewportCameraSpeed=3
 AssetViewerProfileIndex=0
 MaterialQualityLevel=1
 
@@ -93,7 +93,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 Generic.Surface Materials=True
@@ -209,8 +209,8 @@ ChangeVariableType_Warning=False
 /Game/Blueprints/Marimba.Marimba_C:2w_GEN_VARIABLE=1
 
 [RootWindow]
-ScreenPosition=X=384.000 Y=196.000
-WindowSize=X=1290.000 Y=730.000
+ScreenPosition=X=636.000 Y=113.000
+WindowSize=X=1300.000 Y=740.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -711,6 +711,8 @@ BlueprintProfiler.TimeStamp=2016.10.04-19.56.48
 BlueprintProfiler.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2016.10.04-19.56.47
 BlueprintGraph.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2016.10.04-19.56.59
+MovieSceneCapture.LastCompileMethod=Unknown
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Marimba.Marimba;
