fixed consecutive hits

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -39,8 +39,8 @@ CreateAudioDeviceForEveryPlayer=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@NAUTILUS
 LastExecutedLaunchName=NAUTILUS
 
@@ -192,12 +192,34 @@ NavMeshBoundsVolume.Navigation=True
 NavMeshBoundsVolume.Collision=True
 NavMeshBoundsVolume.Tags=True
 NavMeshBoundsVolume.Actor=True
+Keyboard_C.Tick=True
+Keyboard_C.Rendering=True
+Keyboard_C.Replication=True
+Keyboard_C.Input=True
+Keyboard_C.Actor=True
+NoteBlock_BP_C.TransformCommon=True
+SceneComponent.Physics=True
+SceneComponent.Collision=False
+SceneComponent.LOD=False
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=False
+BoxComponent.Events=True
+StaticMeshComponent.Mobile=True
 
 [DetailCategoriesAdvanced]
 ObjectProperty.Variable=True
 K2Node_VariableGet.Variable=True
 ChildActorComponent.Rendering=True
 Marimba_C.Actor=True
+NoteBlock_BP_C.Actor=True
+BoxComponent.Collision=True
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
@@ -210,7 +232,7 @@ ChangeVariableType_Warning=False
 
 [RootWindow]
 ScreenPosition=X=636.000 Y=113.000
-WindowSize=X=1300.000 Y=740.000
+WindowSize=X=1310.000 Y=750.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -716,6 +738,7 @@ MovieSceneCapture.LastCompileMethod=Unknown
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Marimba.Marimba;
+RecentlyPlaced=/Game/Blueprints/NoteBlock_BP.NoteBlock_BP;
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -726,5 +749,17 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PropertyEditorToolkit_PinAsColumnHeader=24.000000
 Property=0.500000
 Value=1.000000
+
+[/Script/Kismet.BlueprintPaletteFavorites]
+CustomFavorites=(FieldName="/Script/Engine.Actor:ReceiveBeginPlay",NodeName="/Script/BlueprintGraph.K2Node_Event")
+CustomFavorites=(FieldName="/Script/Engine.Actor:ReceiveTick",NodeName="/Script/BlueprintGraph.K2Node_Event")
+CustomFavorites=(FieldName="/Script/Engine.GameplayStatics:GetPlayerPawn",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
+CustomFavorites=(NodeName="/Script/BlueprintGraph.K2Node_IfThenElse")
+CustomFavorites=(FieldName="/Script/Engine.Actor:GetTransform",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
+CustomFavorites=(FieldName="/Script/Engine.Actor:K2_DestroyActor",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
+CustomFavorites=(FieldName="/Script/Engine.GameplayStatics:GetAllActorsOfClass",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
+CustomFavorites=(NodeName="/Script/BlueprintGraph.K2Node_SpawnActorFromClass")
+CustomFavorites=(FieldName="/Script/Engine.PrimitiveComponent:AddAngularImpulse",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
+CurrentProfile=CustomProfile
 
 
