marimba has notes according to appropriate scale

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -212,6 +212,31 @@ BoxComponent.Collision=True
 BoxComponent.Tags=False
 BoxComponent.Events=True
 StaticMeshComponent.Mobile=True
+BP_PickupCube_C.TransformCommon=True
+BP_PickupCube_C.StaticMesh=True
+BP_PickupCube_C.Materials=True
+BP_PickupCube_C.Physics=True
+BP_PickupCube_C.Collision=True
+BP_PickupCube_C.Lighting=True
+BP_PickupCube_C.Rendering=True
+BP_PickupCube_C.Tags=True
+BP_PickupCube_C.Input=True
+BP_PickupCube_C.Actor=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Actor=True
+MotionControllerPawn_C.TransformCommon=True
+MotionControllerPawn_C.Pawn=True
+MotionControllerPawn_C.Camera=True
+MotionControllerPawn_C.Rendering=True
+MotionControllerPawn_C.Input=True
+MotionControllerPawn_C.Actor=True
 
 [DetailCategoriesAdvanced]
 ObjectProperty.Variable=True
@@ -220,6 +245,7 @@ ChildActorComponent.Rendering=True
 Marimba_C.Actor=True
 NoteBlock_BP_C.Actor=True
 BoxComponent.Collision=True
+StaticMeshActor.StaticMesh=False
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
@@ -232,7 +258,7 @@ ChangeVariableType_Warning=False
 
 [RootWindow]
 ScreenPosition=X=636.000 Y=113.000
-WindowSize=X=1310.000 Y=750.000
+WindowSize=X=1320.000 Y=760.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -735,8 +761,11 @@ BlueprintGraph.TimeStamp=2016.10.04-19.56.47
 BlueprintGraph.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2016.10.04-19.56.59
 MovieSceneCapture.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2016.10.04-19.56.55
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/Marimba.Marimba;
 RecentlyPlaced=/Game/Blueprints/NoteBlock_BP.NoteBlock_BP;
 
@@ -761,5 +790,8 @@ CustomFavorites=(FieldName="/Script/Engine.GameplayStatics:GetAllActorsOfClass",
 CustomFavorites=(NodeName="/Script/BlueprintGraph.K2Node_SpawnActorFromClass")
 CustomFavorites=(FieldName="/Script/Engine.PrimitiveComponent:AddAngularImpulse",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
 CurrentProfile=CustomProfile
+
+[SelectionDetails]
+PreserveScaleRatio=True
 
 
