Adding haptic feedback effect

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -96,7 +96,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 Generic.Surface Materials=True
@@ -240,6 +240,12 @@ MotionControllerPawn_C.Camera=True
 MotionControllerPawn_C.Rendering=True
 MotionControllerPawn_C.Input=True
 MotionControllerPawn_C.Actor=True
+HapticFeedbackEffect_Curve.HapticFeedbackEffect=True
+HapticFeedbackEffect_SoundWave.HapticFeedbackEffect_SoundWave=True
+ClassProperty.Variable=True
+ClassProperty.DefaultValueCategory=True
+ForceFeedbackEffect.ForceFeedbackEffect=True
+ForceFeedbackEffect.Info=True
 
 [DetailCategoriesAdvanced]
 ObjectProperty.Variable=True
@@ -258,10 +264,12 @@ ChangeVariableType_Warning=False
 /Game/Blueprints/NoteBlock_BP.NoteBlock_BP=1
 /Game/Blueprints/Marimba.Marimba=1
 /Game/Blueprints/Marimba.Marimba_C:2w_GEN_VARIABLE=1
+/Game/Blueprints/hit_effect.hit_effect=1
+/Game/Blueprints/hit_sound_feedback.hit_sound_feedback=1
 
 [RootWindow]
 ScreenPosition=X=590.000 Y=113.000
-WindowSize=X=1330.000 Y=770.000
+WindowSize=X=1340.000 Y=780.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -776,6 +784,10 @@ RecentlyPlaced=/Game/Blueprints/NoteBlock_BP.NoteBlock_BP;
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+HapticFeedbackEffect_Curve="\"Object.HapticFeedbackEffect.HapticDetails\" \"Object.HapticFeedbackEffect.HapticDetails.Amplitude\" "
+HapticFeedbackEffect_Base=
+Object=
+ForceFeedbackEffect="\"Object.ForceFeedbackEffect.ChannelDetails\" \"Object.ForceFeedbackEffect.ChannelDetails.ChannelDetails[0]\" "
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24.000000
@@ -796,5 +808,10 @@ CurrentProfile=CustomProfile
 
 [SelectionDetails]
 PreserveScaleRatio=True
+
+[/Script/UnrealEd.ContentBrowserSettings]
+DisplayEngineFolder=True
+DisplayL10NFolder=True
+DisplayPluginFolders=True
 
 
