Making lounge space, added boncontro

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -45,7 +45,6 @@ LastExecutedLaunchDevice=WindowsNoEditor@NAUTILUS
 LastExecutedLaunchName=NAUTILUS
 NewWindowPosition=(X=315,Y=143)
 LastExecutedPlayModeLocation=PlayLocation_CurrentCameraLocation
-LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -72,7 +71,7 @@ MRUItem0=/Game/VirtualRealityBP/Maps/MotionControllerMap
 MRUItem1=/Game/VirtualRealityBP/Maps/HMDLocomotionMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Props
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=False
@@ -91,7 +90,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
-AssetPropertyPicker.CurrentViewType=0
+AssetPropertyPicker.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/VirtualRealityBP/Maps/MotionControllerMap
@@ -307,6 +306,72 @@ CapsuleComponent.Physics=True
 CapsuleComponent.Collision=True
 CapsuleComponent.Tags=True
 CapsuleComponent.Events=True
+NavModifierVolume.TransformCommon=True
+NavModifierVolume.BrushSettings=True
+NavModifierVolume.Default=True
+NavModifierVolume.Collision=True
+NavModifierVolume.Tags=True
+NavModifierVolume.Actor=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.LightShafts=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.Lightmass=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Rendering=True
+DirectionalLight.Tags=True
+DirectionalLight.Actor=True
+DirectionalLightComponent.TransformCommon=True
+DirectionalLightComponent.Light=True
+DirectionalLightComponent.LightShafts=True
+DirectionalLightComponent.DistanceFieldShadows=True
+DirectionalLightComponent.CascadedShadowMaps=True
+DirectionalLightComponent.Lightmass=True
+DirectionalLightComponent.Performance=True
+DirectionalLightComponent.LightFunction=True
+DirectionalLightComponent.Rendering=True
+DirectionalLightComponent.Tags=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Light Profiles=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.DistanceFieldShadows=True
+PointLight.Rendering=True
+PointLight.Tags=True
+PointLight.Actor=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.MaterialInterface=True
+PreviewMaterial.Thumbnail=True
+SpotLight.TransformCommon=True
+SpotLight.Light=True
+SpotLight.Light Profiles=True
+SpotLight.Lightmass=True
+SpotLight.Performance=True
+SpotLight.LightFunction=True
+SpotLight.DistanceFieldShadows=True
+SpotLight.Rendering=True
+SpotLight.Tags=True
+SpotLight.Actor=True
 
 [DetailCategoriesAdvanced]
 ObjectProperty.Variable=True
@@ -332,7 +397,7 @@ ChangeVariableType_Warning=False
 
 [RootWindow]
 ScreenPosition=X=570.000 Y=113.000
-WindowSize=X=1350.000 Y=790.000
+WindowSize=X=1360.000 Y=800.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -353,7 +418,7 @@ UNR=../../../../../../Users/ajgaj/Documents/RIT/VR/MarimbaModel/Content/VirtualR
 BRUSH=../../../../../../Users/Eric/Documents/Unreal Projects/MarimbaWithSound/Content/
 FBX=../../../../../../Users/Eric/Documents/Unreal Projects/MarimbaWithSound/Content/
 FBXAnim=../../../../../../Users/Eric/Documents/Unreal Projects/MarimbaWithSound/Content/
-GenericImport=../../../../../../Users/Eric/Documents/Unreal Projects/MarimbaWithSound/Content/
+GenericImport=../../../../../../Users/ajgaj/Pictures/BONCONTRO.jpg
 GenericExport=../../../../../../Users/Eric/Documents/Unreal Projects/MarimbaWithSound/Content/
 GenericOpen=../../../../../../Users/Eric/Documents/Unreal Projects/MarimbaWithSound/Content/
 GenericSave=../../../../../../Users/Eric/Documents/Unreal Projects/MarimbaWithSound/Content/
@@ -837,8 +902,17 @@ MovieSceneCapture.TimeStamp=2016.10.04-19.56.59
 MovieSceneCapture.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2016.10.04-19.56.55
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2016.09.08-20.32.04
+MaterialEditor.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Props/SM_Couch.SM_Couch;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Ceiling.SM_Lamp_Ceiling;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Chair.SM_Chair;
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
+RecentlyPlaced=/Game/BONCONTRO.BONCONTRO;
+RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/Marimba.Marimba;
 RecentlyPlaced=/Game/Blueprints/NoteBlock_BP.NoteBlock_BP;
@@ -851,6 +925,7 @@ HapticFeedbackEffect_Curve="\"Object.HapticFeedbackEffect.HapticDetails\" \"Obje
 HapticFeedbackEffect_Base=
 Object=
 ForceFeedbackEffect="\"Object.ForceFeedbackEffect.ChannelDetails\" \"Object.ForceFeedbackEffect.ChannelDetails.ChannelDetails[0]\" "
+NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24.000000
@@ -876,5 +951,21 @@ PreserveScaleRatio=False
 DisplayEngineFolder=True
 DisplayL10NFolder=True
 DisplayPluginFolders=True
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+bShowMobileStats=False
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[MaterialEditor]
+LightDir=P=-39.999985 Y=27.499983 R=0.000000
+PrimType=1
+
+[MessageLog]
+LastLogListing=MapCheck
 
 
