adding window and grass view

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -372,6 +372,10 @@ SpotLight.DistanceFieldShadows=True
 SpotLight.Rendering=True
 SpotLight.Tags=True
 SpotLight.Actor=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.PostProcessVolume=True
+PostProcessVolume.Actor=True
 
 [DetailCategoriesAdvanced]
 ObjectProperty.Variable=True
@@ -906,6 +910,10 @@ MaterialEditor.TimeStamp=2016.09.08-20.32.04
 MaterialEditor.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/HDRI/HDRI_Epic_Courtyard_Daylight.HDRI_Epic_Courtyard_Daylight;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Bush.SM_Bush;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Rock.SM_Rock;
+RecentlyPlaced=/Game/StarterContent/Props/SM_GlassWindow.SM_GlassWindow;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Couch.SM_Couch;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Ceiling.SM_Lamp_Ceiling;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Chair.SM_Chair;
@@ -920,12 +928,13 @@ RecentlyPlaced=/Game/Blueprints/NoteBlock_BP.NoteBlock_BP;
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.PostProcessVolume\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 HapticFeedbackEffect_Curve="\"Object.HapticFeedbackEffect.HapticDetails\" \"Object.HapticFeedbackEffect.HapticDetails.Amplitude\" "
 HapticFeedbackEffect_Base=
 Object=
 ForceFeedbackEffect="\"Object.ForceFeedbackEffect.ChannelDetails\" \"Object.ForceFeedbackEffect.ChannelDetails.ChannelDetails[0]\" "
 NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+PostProcessVolume="\"Object.PostProcessVolume\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24.000000
