--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -67,8 +67,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=0
 
 [MRU]
-MRUItem0=/Game/VirtualRealityBP/Maps/StartupMap
-MRUItem1=/Game/VirtualRealityBP/Maps/MotionControllerMap
+MRUItem0=/Game/VirtualRealityBP/Maps/MotionControllerMap
+MRUItem1=/Game/VirtualRealityBP/Maps/StartupMap
 MRUItem2=/Game/VirtualRealityBP/Maps/HMDLocomotionMap
 
 [ContentBrowser]
@@ -94,10 +94,10 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/VirtualRealityBP/Maps/StartupMap
+LastLevel=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 Generic.Surface Materials=True
@@ -415,7 +415,7 @@ ChangeVariableType_Warning=False
 
 [RootWindow]
 ScreenPosition=X=570.000 Y=113.000
-WindowSize=X=1390.000 Y=830.000
+WindowSize=X=1400.000 Y=840.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
