Mallets and fixed haptics

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -11,7 +11,7 @@ SwarmIntermediateFolder=C:/Users/Eric/Documents/Unreal Projects/MarimbaWithSound
 bMonitorEditorPerformance=True
 bShowCompilerLogOnCompileError=False
 bSCSEditorShowFloor=False
-SCSViewportCameraSpeed=3
+SCSViewportCameraSpeed=2
 AssetViewerProfileIndex=0
 MaterialQualityLevel=1
 
@@ -43,8 +43,9 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@NAUTILUS
 LastExecutedLaunchName=NAUTILUS
-NewWindowPosition=(X=315,Y=143)
+NewWindowPosition=(X=-1600,Y=160)
 LastExecutedPlayModeLocation=PlayLocation_CurrentCameraLocation
+LastExecutedPlayModeType=PlayMode_InVR
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -72,10 +73,10 @@ MRUItem1=/Game/VirtualRealityBP/Maps/StartupMap
 MRUItem2=/Game/VirtualRealityBP/Maps/HMDLocomotionMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/InfinityBladeGrassLands/Environments/Misc/Exo_Deco01/Textures
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -98,6 +99,7 @@ LastLevel=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/VirtualRealityBP/Blueprints/BP_MotionController.BP_MotionController
 
 [DetailCategories]
 Generic.Surface Materials=True
@@ -388,6 +390,11 @@ MotionControllerMap_C.Replication=True
 MotionControllerMap_C.Input=True
 MotionControllerMap_C.Actor=True
 K2Node_MakeStruct.PinOptions=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
 
 [DetailCategoriesAdvanced]
 ObjectProperty.Variable=True
@@ -397,6 +404,7 @@ Marimba_C.Actor=True
 NoteBlock_BP_C.Actor=True
 BoxComponent.Collision=True
 StaticMeshActor.StaticMesh=False
+CapsuleComponent.Shape=False
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
@@ -415,7 +423,7 @@ ChangeVariableType_Warning=False
 
 [RootWindow]
 ScreenPosition=X=570.000 Y=113.000
-WindowSize=X=1400.000 Y=840.000
+WindowSize=X=1420.000 Y=860.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -432,7 +440,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Eric/Documents/Unreal Projects/MarimbaModel/Content/VirtualRealityBP/Maps
+UNR=../../../../../../Users/MagicUser/Desktop/MarimbaModel-master/Content/VirtualRealityBP/Maps
 BRUSH=../../../../../../Users/Eric/Documents/Unreal Projects/MarimbaWithSound/Content/
 FBX=../../../../../../Users/Eric/Documents/Unreal Projects/MarimbaWithSound/Content/
 FBXAnim=../../../../../../Users/Eric/Documents/Unreal Projects/MarimbaWithSound/Content/
@@ -442,7 +450,7 @@ GenericOpen=../../../../../../Users/Eric/Documents/Unreal Projects/MarimbaWithSo
 GenericSave=../../../../../../Users/Eric/Documents/Unreal Projects/MarimbaWithSound/Content/
 MeshImportExport=../../../../../../Users/Eric/Documents/Unreal Projects/MarimbaWithSound/Content/
 WorldRoot=../../../../../../Users/Eric/Documents/Unreal Projects/MarimbaWithSound/Content/
-Level=../../../../../../Users/Eric/Documents/Unreal Projects/MarimbaModel/Content/VirtualRealityBP/Maps
+Level=../../../../../../Users/MagicUser/Desktop/MarimbaModel-master/Content/VirtualRealityBP/Maps
 Project=C:/Program Files (x86)/Epic Games/4.13/
 
 [ModuleFileTracking]
@@ -924,6 +932,8 @@ MaterialEditor.TimeStamp=2016.09.08-20.32.04
 MaterialEditor.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2016.10.04-19.57.06
 TextureEditor.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2016.09.08-18.16.43
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [PlacementMode]
 RecentlyPlaced=/Game/InfinityBladeGrassLands/Environments/Misc/Exo_Deco01/StaticMesh/SM_Pine_Low_Cluster.SM_Pine_Low_Cluster;
