marimba feedback changes

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -73,7 +73,7 @@ MRUItem1=/Game/VirtualRealityBP/Maps/StartupMap
 MRUItem2=/Game/VirtualRealityBP/Maps/HMDLocomotionMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/VirtualRealityBP/Blueprints
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
@@ -394,6 +394,8 @@ GeneralProjectSettings.About=True
 GeneralProjectSettings.Legal=True
 GeneralProjectSettings.Displayed=True
 GeneralProjectSettings.Settings=True
+ByteProperty.Variable=True
+ByteProperty.DefaultValueCategory=True
 
 [DetailCategoriesAdvanced]
 ObjectProperty.Variable=True
@@ -422,7 +424,7 @@ ChangeVariableType_Warning=False
 
 [RootWindow]
 ScreenPosition=X=570.000 Y=113.000
-WindowSize=X=1430.000 Y=870.000
+WindowSize=X=1440.000 Y=880.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
